--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ deployment:
   production:
     branch: production
     commands:
-      - git clone $PROD_REPO production && cd production
-      - ./update.sh
+      - git clone $PROD_REPO production 
+      - cd production && ./update.sh && git add --all && git commit -m "Deploy" && git push
 
       
